Fixing overflow hidden bug due to footer

--- a/CSS/hypotenuse.css
+++ b/CSS/hypotenuse.css
@@ -15,7 +15,8 @@ body {
     align-items: center;
     flex-direction: column;
     width: 99%;
-    height: 97vh;
+    /* height: 97vh; */
+    min-height: 97vh;
 }
 
 .container {
